--- a/.github/workflows/objective-c-xcode.yml
+++ b/.github/workflows/objective-c-xcode.yml
@@ -16,6 +16,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Set Default Scheme
         run: |
+        	@xattr -rc Tools >/dev/null 2>&1
+	        $(MAKE) -C Exploits/oobPCI $@
+        	$(MAKE) -C Fugu15 $@
+	        $(MAKE) -C FuguInstall $@
           scheme_list=$(xcodebuild -list -json | tr -d "\n")
           default=$(echo $scheme_list | ruby -e "require 'json'; puts JSON.parse(STDIN.gets)['project']['targets'][0]")
           echo $default | cat >default
